e2e/providers/testdata/envoy-e2e.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: example
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: static
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "hello, world!\n"
                http_filters:
                  - name: wasmxds-test-e2e/sample-filter  # ${namespace}/${name}
                    config_discovery:
                      config_source:
                        api_config_source:
                          api_type: GRPC
                          transport_api_version: V3
                          grpc_services:
                            - envoy_grpc:
                                cluster_name: wasmxds
                      type_urls: ["envoy.extensions.filters.http.wasm.v3.Wasm"]
                  - name: envoy.filters.http.router
                    typed_config: {}

  clusters:
    - connect_timeout: 1s
      http2_protocol_options: {}
      name: wasmxds
      load_assignment:
        cluster_name: wasmxds
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8610

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001

node:
  id: test
  cluster: test
